--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.83.9",
+    "@react-three/fiber": "^8.14.1",
     "@types/node": "20.5.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -16,6 +18,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
+    "framer-motion-3d": "^10.16.4",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
@@ -23,6 +26,7 @@
     "react-icons": "^4.10.1",
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
+    "three": "^0.156.1",
     "typescript": "5.1.6"
   }
 }
